@@ -3,6 +3,7 @@ Small Footprint CIM Client Library NEWS
 Changes in 2.0.1:
 =================
 Bugs:
+- 1740368 Fixed memory corruption on long string properties
 - 1722381 sfcc fails on getInstance for associations
 - 1726113 Parser not clearing qualifier cache
 
